@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- Don't emit a failing test if there is a warning _after_ done_testing() is
+  called. Based on PR #3 from Michael Alan Dorman.
+
+
 0.08     2019-10-11
 
 - Use IPC::Run3 instead of Capture::Tiny for all tests. This fixes an issue
